# behavior_tree

./: CMakeLists.txt  README.md  bt4.xml  package.xml
config/: Project1.btproj  bt3.xml  nav2_params.yaml  ros2_controllers.yaml
include/behavior_tree/nodes/: activate_pointing_node.hpp  gps_nav_node.hpp  img_search_node.hpp  lane_follow_node.hpp  mppi_planning_node.hpp  obstacle_endpoint_detected.hpp  record_current_state_node.hpp  recovery_placeholder_node.hpp  set_autonomous_light_node.hpp  stop_rover_node.hpp  waypoint_reached.hpp
launch/: test_simulation.launch.py  ugvc_bt.launch.py
src/: bt_executor.cpp
urdf/: ugv_rover.xacro
worlds/: V3_Utrack_UGV26.sdf
